# fragnova

./: .gitignore  Cargo.toml  README.md  codecov.yml  docker-compose.yml  index.html  rustfmt.toml  testnet.json
.devcontainer/: devcontainer.json
.github/workflows/: check.yml  publish-npm-packages.yaml  publish-rustdoc.yaml
.lsp/.cache/: lock.mdb
.maintain/: frame-weight-template.hbs
chains/: add-test-assets.edn  common.edn  fragments-tests.edn  gen-keys.edn  run.sh  test-protos-ipfs.edn  test-protos-rpc.edn
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/clamor/: all.html  index.html  sidebar-items.js
doc/clamor_runtime/: all.html  constant.CENTS.html  constant.CONTRACTS_DEBUG_OUTPUT.html  constant.DAYS.html  constant.DOLLARS.html  constant.HOURS.html  constant.MAXIMUM_BLOCK_LENGTH.html  constant.MAXIMUM_METADATA_DATA_LENGTH.html  constant.MAXIMUM_NESTED_CALL_DEPTH_LEVEL.html  constant.MILLICENTS.html  constant.MILLISECS_PER_BLOCK.html  constant.MINUTES.html  constant.SLOT_DURATION.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  constant.WEIGHT_PER_SECOND.html  enum.BalancesCall.html  enum.Call.html  enum.Event.html  enum.FragmentsCall.html  enum.OriginCaller.html  enum.ProtosCall.html  enum.RuntimeCall.html  enum.RuntimeEvent.html  enum.TimestampCall.html  fn.deposit.html  fn.native_version.html  index.html  macro.construct_runtime.html  macro.parameter_types.html  sidebar-items.js  struct.ApprovalDeposit.html  struct.AssetDeposit.html  struct.BaseCallFilter.html  struct.BlockExecutionWeight.html  struct.BlockHashCount.html  struct.BlockLength.html  struct.BlockWeights.html  struct.DeletionQueueDepth.html  (+101 more)
doc/doc/: crates.js  search-index.js  settings.html  source-files.js
doc/fragnova/: all.html  index.html  sidebar-items.js
doc/fragnova_extensions/: all.html  enum.FragnovaEnvironment.html  enum.MyChainExtension.html  enum.MyChainExtensionError.html  index.html  sidebar-items.js  type.AssetId.html
doc/fragnova_runtime/: all.html  constant.CENTS.html  constant.CONTRACTS_DEBUG_OUTPUT.html  constant.DAYS.html  constant.DOLLARS.html  constant.HOURS.html  constant.MAXIMUM_BLOCK_LENGTH.html  constant.MAXIMUM_METADATA_DATA_LENGTH.html  constant.MAXIMUM_NESTED_CALL_DEPTH_LEVEL.html  constant.MILLICENTS.html  constant.MILLISECS_PER_BLOCK.html  constant.MINUTES.html  constant.SLOT_DURATION.html  constant.VERSION.html  constant.WASM_BINARY.html  constant.WASM_BINARY_BLOATY.html  constant.WEIGHT_PER_SECOND.html  enum.BalancesCall.html  enum.Call.html  enum.Event.html  enum.FragmentsCall.html  enum.OriginCaller.html  enum.ProtosCall.html  enum.RuntimeCall.html  enum.RuntimeEvent.html  enum.TimestampCall.html  fn.deposit.html  fn.native_version.html  index.html  macro.construct_runtime.html  macro.parameter_types.html  sidebar-items.js  struct.ApprovalDeposit.html  struct.AssetDeposit.html  struct.BaseCallFilter.html  struct.BlockExecutionWeight.html  struct.BlockHashCount.html  struct.BlockLength.html  struct.BlockWeights.html  struct.DeletionQueueDepth.html  (+96 more)
doc/pallet_accounts/: all.html  constant.KEY_TYPE.html  enum.ExternalID.html  index.html  sidebar-items.js  struct.AccountInfo.html  struct.EthLock.html  (+4 more)
docs/: Fragments Storage.md  Pallets Dependency Graph.excalidraw.md  Protos Storage.md  testnet-setup.md
extensions/: Cargo.toml  README.md  lib.rs
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  clamor.rs  cli.rs  command.rs  lib.rs  main.rs  rpc.rs  service.rs
pallets/accounts/: Cargo.toml
pallets/accounts/src/: benchmarking.rs  dummy_data.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/aliases/: Cargo.toml
pallets/aliases/src/: benchmarking.rs  dummy_data.rs  lib.rs  mock.rs  tests.rs
pallets/clamor-tools/: Cargo.toml
pallets/clamor-tools/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/clusters/: Cargo.toml
pallets/clusters/src/: benchmarking.rs  dummy_data.rs  lib.rs  mock.rs  tests.rs
pallets/detach/: Cargo.toml
pallets/detach/src/: benchmarking.rs  copy_pasted_beefy_merkle_tree.rs  dummy_data.rs  lib.rs  merkle_tree.rs  mock.rs  tests.rs  uomo_contento.rs  weights.rs
pallets/entities/: Cargo.toml
pallets/entities/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/fragments/: Cargo.toml  README.md
pallets/fragments/rpc/: Cargo.toml
pallets/fragments/rpc/runtime-api/: Cargo.toml
pallets/fragments/rpc/runtime-api/src/: lib.rs
pallets/fragments/rpc/src/: lib.rs
pallets/fragments/src/: benchmarking.rs  dummy_data.rs  impl_nonfungible.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/oracle/: Cargo.toml  README.md
pallets/oracle/res/: chainlink_abi.json
pallets/oracle/src/: benchmarking.rs  lib.rs  tests.rs
pallets/protos/: Cargo.toml
pallets/protos/rpc/: Cargo.toml
pallets/protos/rpc/runtime-api/: Cargo.toml
pallets/protos/rpc/runtime-api/src/: lib.rs
pallets/protos/rpc/src/: Cargo.toml  lib.rs
pallets/protos/src/: benchmarking.rs  categories.rs  common.rs  dummy_data.rs  get_by_tags.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/protos/src/tests/: get_metadata_batch.rs  mod.rs
pallets/storage/: Cargo.toml
pallets/storage/src/: lib.rs  mock.rs
primitives/chainblocks/: Cargo.toml
primitives/chainblocks/src/: lib.rs  validate_fragment.edn
primitives/fragnova/: Cargo.toml
primitives/fragnova/src/: core_primitives.rs  fragments.rs  helper_functions.rs  lib.rs  protos.rs  runtime_interface.rs
rpc/: index.js  package.json  rpc-tests.js
runtime/: Cargo.toml  build.rs  validate-transaction.edn
runtime/src/: chain_extension.rs  constants.rs  currency_for_pallet_contracts.rs  lib.rs
runtime/src/chain_extension/: mock.rs  mod.rs  tests.rs
runtime/src/chain_extension/dummy_contract/: Cargo.toml  lib.rs
scripts/: prometheus.yaml  run_all_benchmarks.sh  update-gh-pages.sh
shards/: add-test-assets.edn  common.edn  fragnova.edn  gen-keys.edn  readme.md  run-create-proto-and-fragment.edn  run-test-ipfs.edn  run.sh  test-ipfs.sh  test-protos-ipfs.edn  test-protos-rpc.edn
(+1047 files in other folders)
