[workspace]
members = [
    'node',
	'pallets/*',
    'runtime',
]

# used locally sometimes...
# [patch."https://github.com/fragcolor-xyz/chainblocks"]
# chainblocks = { path = "../chainblocks/rust" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

# Inspired from https://github.com/paritytech/substrate/blob/master/Cargo.toml:
[profile.production]
inherits = "release"
