[workspace]
members = [
    'node',
	'pallets/*',
    'runtime',
    'extensions',
]

# used locally sometimes...
# [patch."https://github.com/fragcolor-xyz/chainblocks"]
# chainblocks = { path = "../chainblocks/rust" }

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"

# Inspired from https://github.com/paritytech/substrate/blob/master/Cargo.toml:
[profile.production]
inherits = "release"

# Sacrifice compile speed for execution speed by using optimization flags:

# https://doc.rust-lang.org/rustc/linker-plugin-lto.html
lto = "fat"
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1
