[package]
name = 'fragnova-runtime'
version = '4.0.0-dev'
description = 'A fresh FRAME-based Substrate runtime, ready for hacking.'
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
homepage = 'https://substrate.io/'
edition = '2021'
license = 'Unlicense'
publish = false
repository = 'https://github.com/substrate-developer-hub/substrate-node-template/'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[dependencies]
sp-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-block-builder = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-consensus-aura = { version = '0.10.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-core = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-inherents = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-offchain = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-runtime = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-session = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-std = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-transaction-pool = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-version = { version = '5.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
sp-fragnova = { version = '0.1.0', path = '../primitives/fragnova', default-features = false }

frame-executive = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-support = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-assets = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-aura = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-balances = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-grandpa = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-randomness-collective-flip = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-sudo = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-timestamp = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-transaction-payment = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-indices = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-contracts = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-contracts-primitives = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-multisig = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-proxy = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-identity = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-utility = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-protos = { version = '0.0.1', default-features = false, path = '../pallets/protos' }
pallet-fragments = { version = '0.0.1', default-features = false, path = '../pallets/fragments' }
pallet-accounts = { version = '0.0.1', default-features = false, path = '../pallets/accounts' }
pallet-detach = { version = '0.0.1', default-features = false, path = '../pallets/detach' }
pallet-oracle = { version = '0.0.1', default-features = false, path = '../pallets/oracle' }
pallet-clusters = { version = '0.0.1', default-features = false, path = '../pallets/clusters' }
pallet-aliases = { version = '0.0.1', default-features = false, path = '../pallets/aliases' }

# Used for the RPCs
frame-system-rpc-runtime-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-transaction-payment-rpc-runtime-api = { version = '4.0.0-dev', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
pallet-protos-rpc-runtime-api = { version = '0.0.1', default-features = false, path = '../pallets/protos/rpc/runtime-api' }
pallet-fragments-rpc-runtime-api = { version = '0.0.1', default-features = false, path = '../pallets/fragments/rpc/runtime-api' }

# Used for runtime benchmarking
frame-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }
frame-system-benchmarking = { version = '4.0.0-dev', default-features = false, optional = true, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

codec = { package = 'parity-scale-codec', version = '3.0.0', default-features = false, features = ['derive'] }
scale-info = { version = '2.1.2', default-features = false, features = ['derive'] }

hex-literal = { version = '0.3.1', optional = true }
log = { version = "0.4.14", default-features = false }
hex = { version = "0.4.3", default-features = false }
protos = { version = "0.1.28", default-features = false }

# These use `std`:
#unic-emoji-char = {version = "0.9.0", default-features = false }
#jpeg-decoder = { version = "0.3.0", default-features = false }# features = ["nightly_aarch64_neon"] }
#png = "0.17.7"

# These dependencies are for validating data (and they don't use `std`):
serde_json = { version = '1.0.79', default-features = false, features = ['alloc'] }
infer = { version = "0.11.0", default-features=false }
# png-decoder = "0.1.1"
# ttf-parser = { version = "0.17.1", default-features = false }
# svgtypes = "0.8.2"
# wasmparser-nostd = { version = "0.91.0", default-features = false }
# rmp3 = { version = "0.3", default-features = false } # Official Idiomatic `no_std` bindings to minimp3 (short for "Minimalistic MP3 decoder single header library") (https://github.com/lieff/minimp3). (minimp3's repo's README mentions this crate btw)

[dev-dependencies]
# `sp-io` is used when testing the `chain_extension` module
sp-io = { version = '7.0.0', default-features = false, git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

[build-dependencies]
substrate-wasm-builder = { version = '5.0.0-dev', git = 'https://github.com/fragcolor-xyz/substrate.git', branch = 'fragnova-v0.9.37' }

[features]
default = ['std']
runtime-benchmarks = [
	'sp-runtime/runtime-benchmarks',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
	'pallet-balances/runtime-benchmarks',
    'pallet-assets/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
	'pallet-multisig/runtime-benchmarks',
	'pallet-proxy/runtime-benchmarks',
	'pallet-identity/runtime-benchmarks',
	'pallet-utility/runtime-benchmarks',
	'pallet-contracts/runtime-benchmarks',
    'pallet-protos/runtime-benchmarks',
    'pallet-fragments/runtime-benchmarks',
    'pallet-detach/runtime-benchmarks',
	'pallet-accounts/runtime-benchmarks',
	'pallet-clusters/runtime-benchmarks',
	'pallet-aliases/runtime-benchmarks',
	'pallet-oracle/runtime-benchmarks',
]
std = [
	'sp-api/std',
	'sp-block-builder/std',
	'sp-consensus-aura/std',
	'sp-core/std',
	'sp-inherents/std',
	'sp-offchain/std',
	'sp-runtime/std',
	'sp-session/std',
	'sp-std/std',
	'sp-transaction-pool/std',
	'sp-version/std',
	'frame-executive/std',
	'frame-support/std',
	'frame-system-rpc-runtime-api/std',
	'frame-system/std',
	'pallet-assets/std',
	'pallet-aura/std',
	'pallet-balances/std',
	'pallet-contracts/std',
	'pallet-contracts-primitives/std',
	'pallet-grandpa/std',
	'pallet-identity/std',
	'pallet-indices/std',
	'pallet-multisig/std',
	'pallet-proxy/std',
	'pallet-randomness-collective-flip/std',
	'pallet-sudo/std',
	'pallet-timestamp/std',
	'pallet-transaction-payment/std',
	'pallet-utility/std',
	'pallet-protos/std',
	'pallet-detach/std',
	'pallet-clusters/std',
	'pallet-aliases/std',
	'pallet-fragments/std',
	'pallet-oracle/std',
	'pallet-transaction-payment-rpc-runtime-api/std',
	'pallet-protos-rpc-runtime-api/std',
	'pallet-fragments-rpc-runtime-api/std',
    'codec/std',
    'scale-info/std',
    'protos/std'
]
